--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
     "redux-form": "^6.1.1",
