--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux-form": "^6.1.1",
     "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
+    "validator": "^6.1.0",
     "whatwg-fetch": "^1.0.0"
   },
   "scripts": {
