--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "redux": "^3.6.0",
     "redux-form": "^6.1.1",
     "redux-logger": "^2.7.0",
+    "redux-persist": "^4.0.0-alpha6",
+    "redux-persist-immutable": "^4.0.1",
     "redux-thunk": "^2.1.0",
     "validator": "^6.1.0",
     "whatwg-fetch": "^1.0.0"
