--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "immutable": "^3.8.1",
     "material-ui": "^0.16.1",
     "react": "^15.3.2",
+    "react-datagrid": "^2.1.1",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
